@@ -288,76 +288,6 @@ class Preferences extends TestCase
     }
 
     /**
-     * Data provider for cards sizes tests
-     *
-     * @return array
-     */
-    public static function sizesProvider(): array
-    {
-        return [
-            [//defaults
-                15, //vertical margin
-                20, //horizontal margin
-                5,  //vertical spacing
-                10, //horizontal spacing
-                0   //expected number of warnings
-            ], [ //OK
-                0,  //vertical margin
-                20, //horizontal margin
-                11, //vertical spacing
-                10, //horizontal spacing
-                0   //expected number of warnings
-            ], [ //vertical overflow
-                0,  //vertical margin
-                20, //horizontal margin
-                12, //vertical spacing
-                10, //horizontal spacing
-                1   //expected number of warnings
-            ], [//horizontal overflow
-                15, //vertical margin
-                20, //horizontal margin
-                5,  //vertical spacing
-                61, //horizontal spacing
-                1   //expected number of warnings
-            ], [//vertical and horizontal overflow
-                0,  //vertical margin
-                20, //horizontal margin
-                12, //vertical spacing
-                61, //horizontal spacing
-                2   //expected number of warnings
-            ], [//vertical overflow
-                17, //vertical margin
-                20, //horizontal margin
-                5,  //vertical spacing
-                10, //horizontal spacing
-                1   //expected number of warnings
-            ]
-        ];
-    }
-
-    /**
-     * Test checkCardsSizes
-     *
-     * @dataProvider sizesProvider
-     *
-     * @param integer $vm    Vertical margin
-     * @param integer $hm    Horizontal margin
-     * @param integer $vs    Vertical spacing
-     * @param integer $hs    Horizontal spacing
-     * @param integer $count Number of expected errors
-     *
-     * @return void
-     */
-    public function testCheckCardsSizes(int $vm, int $hm, int $vs, int $hs, int $count): void
-    {
-        $this->preferences->pref_card_marges_v = $vm;
-        $this->preferences->pref_card_marges_h = $hm;
-        $this->preferences->pref_card_vspace = $vs;
-        $this->preferences->pref_card_hspace = $hs;
-        $this->assertCount($count, $this->preferences->checkCardsSizes());
-    }
-
-    /**
      * Data provider for colors
      *
      * @return array
