@@ -30,6 +30,7 @@ Changes
 - Add payment type on transactions
 - Remove non user related files from cofiguration folder
 - Add monthly contribution membership
+- PDF Member card adaptative size
 
 1.0.3 -> 1.0.4
 
